--- a/results.html
+++ b/results.html
@@ -1,6 +1,6 @@
 <div class="stat-card-inner">
     <div class="overflow-hidden [text-size-adjust:none] side side-0 current-side z-10">
-        <picture><img src="https://live.staticflickr.com/65535/53041807824_6a0e88adb0_k.jpg" width="100%"
+        <picture><img src="https://www.jarvis-protocol.com/assets/images/7dbd2f69c6c3da48c981.png" width="100%"
                 class="absolute"></picture>
         <div class="flip-handle absolute top-0 left-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
         <div class="flip-handle absolute top-0 right-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
@@ -23,17 +23,17 @@
                 <div class="font-face-noto-sans-condensed text-center tracking-widest flex flex-wrap justify-center" style="font-size: 20px; line-height: 22px;"><span class="whitespace-pre"><span class="leading-4 tracking-normal mr-px text-xl">Dragonite</span><span class="tracking-wider leading-3 text-base"></span></span></div>
                 <div class="flex flex-row justify-between mt-4">
                     <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Ice.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/physic_stat.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
                         </span>
                         <div class="flex flex-col align-center -ml-3 self-center"><span class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
                     </div>
                     <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Dark.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/energy_stat.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
                         </span>
                         <div class="flex flex-col align-center -ml-3 self-center"><span class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span class="whitespace-pre"><span class="leading-5 text-2xl">5</span></span></span></div>
                     </div>
                     <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Normal.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/mystic_stat.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
                         </span>
                         <div class="flex flex-col align-center -ml-3 self-center"><span class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span class="whitespace-pre"><span class="leading-5 text-2xl">4</span></span></span></div>
                     </div>
@@ -68,7 +68,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Fairy.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/mystic.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -95,7 +95,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Dragon.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/physic.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -122,7 +122,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Fairy.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/mystic.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -167,7 +167,7 @@
             <div class="h-[4px] shrink"></div>
             <div data-component="superpower-content"
                 class="font-face-noto-sans-condensed mt-[-4px] [word-spacing:-0.5px] ml-[2.7rem] text-xl leading-[1.3rem]">
-                <span>Remove up to 3 damage tokens from an allied character within Range 3. Dragonserph then gains the Stun special condition.</span></div>
+                <span>Remove up to 3 damage tokens from an allied character within Range 3. Drageraph then gains the Stun special condition.</span></div>
         </div><div class="flex flex-shrink h-[20px]"></div><div class="w-full flex flex-col cursor-pointer">
             <div class="flex flex-row">
                 <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
@@ -195,14 +195,13 @@
         </div>
         <div
             class="copyright absolute bottom-[26px] left-[18px] text-white font-face-noto-sans-condensed tracking-normal">
-            patreon.com/pokecrisis</div>
-        <div class="absolute bottom-[24px] left-[140px] text-white"><img
-                src="https://www.jarvis-protocol.com/assets/images/52022998a6c8061db499.png" class="w-[42px]"></div>
+             </div>
+        <div class="absolute bottom-[24px] left-[140px] text-white"></div>
         <div class="artist-name absolute bottom-[26px] left-44 ml-2 text-white font-face-noto-sans-condensed"><span
-                class="whitespace-pre"><span class="leading-4 text-md tracking-normal mr-px">?</span></span></div>
+                class="whitespace-pre"><span class="leading-4 text-md tracking-normal mr-px"></span></span></div>
     </div>
     <div class="overflow-hidden [text-size-adjust:none] side side-1 no-print z-0">
-        <picture><img src="https://live.staticflickr.com/65535/53042108433_f6a4323e19_k.jpg" width="100%"
+        <picture><img src="https://www.jarvis-protocol.com/assets/images/a4c313f0ff4f66f7ec80.png" width="100%"
                 class="absolute"></picture>
         <div class="flip-handle absolute top-0 left-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
         <div class="flip-handle absolute top-0 right-0 z-30 h-[70px] w-[70px] cursor-alias"></div>
@@ -224,17 +223,17 @@
                 <div class="font-face-noto-sans-condensed text-center tracking-widest flex flex-wrap justify-center" style="font-size: 20px; line-height: 22px;"><span class="whitespace-pre"><span class="leading-4 tracking-normal mr-px text-xl">Dragonite</span><span class="tracking-wider leading-3 text-base"></span></span></div>
                 <div class="flex flex-row justify-between mt-4">
                     <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Ice.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/physic_stat.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
                         </span>
                         <div class="flex flex-col align-center -ml-3 self-center"><span class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span class="whitespace-pre"><span class="leading-5 text-2xl">3</span></span></span></div>
                     </div>
                     <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Dark.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/energy_stat.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
                         </span>
                         <div class="flex flex-col align-center -ml-3 self-center"><span class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span class="whitespace-pre"><span class="leading-5 text-2xl">5</span></span></span></div>
                     </div>
                     <div class="pill-with-badge relative flex flex-row h-11"><span class="bg-black rounded-full z-10">
-                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Normal.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
+                            <div class="h-full text-white flex flex-col justify-center align-center w-11 text-2xl"><img src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/mystic_stat.png" class="rounded-full w-11 border-solid border-2 border-black"></div>
                         </span>
                         <div class="flex flex-col align-center -ml-3 self-center"><span class="pill bg-black py-1 text-white font-bold font-face-noto-sans-condensed-bold whitespace-nowrap rounded-r-full w-13 text-center pl-4 pr-4 leading-5 text-2xl"><span class="whitespace-pre"><span class="leading-5 text-2xl">4</span></span></span></div>
                     </div>
@@ -269,7 +268,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Fairy.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/mystic.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -296,7 +295,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Dragon.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/physic.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -323,7 +322,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Fairy.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/mystic.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -350,7 +349,7 @@
         <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
                 class="bg-black rounded-full z-10 w-11 h-11">
                 <div class="h-full text-white flex flex-col justify-center align-center w-11 text-3xl"><img
-                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/Pokemon_Type_Icon_Dragon.png"
+                        src="https://raw.githubusercontent.com/sambranaivan/poke.crisis/master/icons/energy.png"
                         class="rounded-full w-11"></div>
             </span>
             <div class="flex flex-col align-center -ml-3 self-center w-full"><span
@@ -368,7 +367,7 @@
         <div class="h-[2px] shrink"></div>
         <ul class="list-disc ml-7 mt-[-2px]">
             <li data-component="special-rule"
-                class="pl-2 mb-1 last:mb-0 [word-spacing:-0.5px] leading-[1.3rem] text-xl"><span><span>After this attack is resolved, Dragonserph's attack dice are reduced by 2 for its next attack.
+                class="pl-2 mb-1 last:mb-0 [word-spacing:-0.5px] leading-[1.3rem] text-xl"><span><span>After this attack is resolved, Drageraph's attack dice are reduced by 2 for its next attack.
                     </span></span></li>
         </ul>
     </div>
@@ -395,7 +394,7 @@
             <div class="h-[4px] shrink"></div>
             <div data-component="superpower-content"
                 class="font-face-noto-sans-condensed mt-[-4px] [word-spacing:-0.5px] ml-[2.7rem] text-xl leading-[1.3rem]">
-                <span>Remove up to 3 damage tokens from an allied character within Range 3. Dragonserph then gains the Stun special condition.</span></div>
+                <span>Remove up to 3 damage tokens from an allied character within Range 3. Drageraph then gains the Stun special condition.</span></div>
         </div><div class="flex flex-shrink h-[20px]"></div><div class="w-full flex flex-col cursor-pointer">
             <div class="flex flex-row">
                 <div class="pill-with-badge relative flex flex-row h-11 w-full flex-1"><span
